# deployRAG

./: Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  vector_loader.py
.github/workflows/: tests.yaml
app/: ES_loader.py  __init__.py  custom_metrics.py  main.py  metrics.py  requirements.txt  vector_loader.py
app/vectorstore/db_faiss/: index.faiss  index.pkl
k8s/: deployment.yaml  hpa.yaml  service.yaml  servicemonitor.yaml
tests/integration/: test_rag_chain.py
tests/monitoring/: test_metrics_endpoint.py
tests/unit/: test_format_docs.py  test_latency_observe.py  test_load_kb.py  test_prompt.py
