[project]
name = "deployrag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "faiss-cpu>=1.11.0",
    "flake8>=7.2.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.18",
    "openai>=1.82.1",
    "prometheus-client>=0.22.0",
    "pypdf>=5.5.0",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.12",
    "streamlit>=1.45.1",
]


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["app"]


[tool.ruff]
lint.ignore = ["F401", "E501", "F841"]
line-length = 120
exclude = [
    "migrations",
    "docs",
    "venv",
    ".venv",
    ".git",
    "__pycache__",
]
